--- a/index.html
+++ b/index.html
@@ -3,100 +3,275 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Lifestyle Theme</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css"
-    />
+    <title>Lifestyle Vibes</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2/dist/umd/popper.min.js"></script>
   </head>
+
+  <style>
+    body {
+      background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+      height: auto;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      overflow-y: visible;
+      overflow-x: hidden; 
+    }
+
+    .navbar {
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      background: linear-gradient(to right, #1a1a1a, #2c3e50) !important;
+      height: 100px;
+    }
+
+    .navbar-brand {
+      font-size: 2rem;
+      font-weight: bold;
+      color: #fff !important;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    .nav-link {
+      font-weight: 500;
+      transition: color 0.3s ease;
+    }
+
+    .nav-link:hover {
+      color: #ffffff !important;
+    }
+    
+    .navbar .form-control {
+      background-color: #333;
+      color: white;
+      border: none;
+      padding: 0.5rem;
+    }
+
+    .navbar .form-control::placeholder {
+      color: #ffffff;
+    }
+
+    .navbar .btn-outline-dark {
+      color: white;
+      border-color: #000000;
+    }
+
+    .navbar .btn-outline-dark:hover {
+      background-color: #333;
+      color: white;
+    }
+
+    h2, h3 {
+      color: #333;
+    }
+
+    main.container {
+      margin-top: 20px;
+      padding: 20px;
+      background-color: #f8f9fa;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      overflow: visible;
+    }
+
+    /* Carousel Styling */
+    .carousel {
+      position: relative;
+      max-width: fit-content;
+      margin: auto;
+      overflow: hidden; 
+      padding-bottom: 20px;
+      }
+      .carousel-inner {
+      display: flex;
+      transition: transform 0.5s ease; 
+      }
+      .carousel-item {
+      min-width: 100%; 
+      box-sizing: border-box; 
+      }
+
+      .carousel-item img {
+      width: 100%;
+      }
+
+      .carousel-control {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: rgba(255, 255, 255, 0.7); /* Semi-transparent background */
+      border: none;
+      cursor: pointer;
+      padding: 10px;
+      border-radius: 50%; /* Round buttons */
+      z-index: 10; /* Ensure buttons are above other elements */
+      }
+
+      .carousel-control:hover {
+      background-color: rgba(255, 255, 255, 1); /* Change background on hover */
+      }
+
+    /* Form Styling */
+    .grid form {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap
+    }
+
+    .grid input, .grid button {
+      padding: 8px;
+      border-radius: 5px;
+      border: 1px solid #ddd;
+    }
+    
+    footer {
+      padding: 20px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      background: linear-gradient(to right, #1a1a1a, #2c3e50) !important;
+      color: white;
+      text-align: center;
+    }
+
+    .social-icons a {
+      color: white;
+      margin: 0 10px;
+      font-size: 1.5em;
+    }
+
+    .social-icons a:hover {
+      color: #0059ff;
+    }
+
+    footer small a {
+      color: #ccc;
+      margin: 0 5px;
+      text-decoration: none;
+    }
+
+    footer small a:hover {
+      text-decoration: underline;
+    }
+  </style>
+
   <body>
-    <nav class="container-fluid">
-      <ul>
-        <li><strong>Lifestyle Vibes</strong></li>
-      </ul>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#" role="button">Subscribe</a></li>
-      </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Lifestyle Vibes</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="subscribe.html">Subscribe</a>
+            </li>
+          </ul>
+        </div>
+        <form class="d-flex">
+          <div class="input-group">
+            <span class="input-group-text"><i class="fas fa-search"></i></span>
+            <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+          </div>
+          <button class="btn btn-outline-dark ms-2" type="submit">Search</button>
+        </form>
+      </div>
     </nav>
 
-    <main class="container">
-      <div class="grid">
-        <section>
-          <hgroup>
-            <h2>Welcome to the Lifestyle Hub</h2>
-            <h3>Explore trends, wellness, and living your best life</h3>
-          </hgroup>
-          <p>
-            Lifestyle is all about finding balance, embracing health, and living
-            in the moment. Whether you're into fitness, mindfulness, or just
-            looking to elevate your daily routines, you've come to the right
-            place.
-          </p>
-          <figure>
-            <img
-              src="https://images.unsplash.com/photo-1507919909716-c8262e491cde?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="Wellness lifestyle image from Unsplash"
-            />
-            <figcaption>
-              <a href="https://unsplash.com" target="_blank"
-                >Photo from Unsplash</a
-              >
-            </figcaption>
-          </figure>
-          <h3>Latest in Wellness</h3>
-          <p>
-            Discover the latest trends in wellness, from meditation techniques
-            to fitness tips that keep you grounded and healthy.
-          </p>
-          <h3>Explore Fashion & Trends</h3>
-          <p>
-            Stay ahead in fashion with insights into what's trending,
-            sustainable fashion tips, and more.
-          </p>
-        </section>
+    <!-- Carousel -->
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/car.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/kayak.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/view.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/headphone.jpg" class="d-block w-100" alt="...">
+        </div>
       </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+    <main class="container-lg">
+      <section>
+        <h2>Welcome to the Lifestyle Hub</h2>
+        <h3>Explore trends, wellness, and living your best life</h3>
+        <p>
+          Lifestyle is all about finding balance, embracing health, and living
+          in the moment. Whether you're into fitness, mindfulness, or just
+          looking to elevate your daily routines, you've come to the right
+          place.
+        </p>
+        <figure>
+          <img src="img/view.jpg" class="img-fluid" alt="Lifestyle image">
+        </figure>
+        <h3>Latest in Wellness</h3>
+        <p>
+          Discover the latest trends in wellness, from meditation techniques
+          to fitness tips that keep you grounded and healthy.
+        </p>
+        <h3>Explore Fashion & Trends</h3>
+        <p>
+          Stay ahead in fashion with insights into what's trending,
+          sustainable fashion tips, and more.
+        </p>
+      </section>
+
+      <section aria-label="Subscribe example">
+        <form class="row g-3">
+          <div class="col-auto">
+            <label for="inputName" class="visually-hidden">Name</label>
+            <input type="Name" class="form-control" id="inputName" placeholder="name">
+          </div>
+          <div class="col-auto">
+            <label for="inputEmail" class="visually-hidden">Email</label>
+            <input type="Email" class="form-control" id="inputEmail" placeholder="email">
+          </div>
+          <div class="col-auto">
+            <button type="subscribe" class="btn btn-success" href="subscribe.html">Subscribe</button>
+          </div>
+        </form>
+      </section>
     </main>
 
-    <section aria-label="Subscribe example">
-      <div class="container">
-        <article>
-          <hgroup>
-            <h2>Join Our Community</h2>
-            <h3>Subscribe for the latest lifestyle updates</h3>
-          </hgroup>
-          <form class="grid">
-            <input
-              type="text"
-              id="firstname"
-              name="firstname"
-              placeholder="First Name"
-              aria-label="First Name"
-              required
-            />
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Email"
-              aria-label="Email"
-              required
-            />
-            <button type="submit" onclick="event.preventDefault()">
-              Subscribe
-            </button>
-          </form>
-        </article>
+    <footer>
+      <div class="social-icons">
+        <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.twitter.com" target="_blank" aria-label="Twitter">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn">
+          <i class="fab fa-linkedin"></i>
+        </a>
       </div>
-    </section>
-
-    <footer class="container">
-      <small
-        ><a href="#">Privacy Policy</a> •
-        <a href="#">Terms & Conditions</a></small
-      >
+      <small>
+        <a href="#">Privacy Policy</a> •
+        <a href="#">Terms & Conditions</a>
+      </small>
     </footer>
   </body>
 </html>
