--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
       height: auto;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      overflow-y: visible;
+      overflow-y: auto;
       overflow-x: hidden; 
     }
 
@@ -76,7 +76,6 @@
       overflow: visible;
     }
 
-    /* Carousel Styling */
     .carousel {
       position: relative;
       max-width: fit-content;
@@ -101,16 +100,16 @@
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      background-color: rgba(255, 255, 255, 0.7); /* Semi-transparent background */
+      background-color: rgba(255, 255, 255, 0.7);
       border: none;
       cursor: pointer;
       padding: 10px;
-      border-radius: 50%; /* Round buttons */
-      z-index: 10; /* Ensure buttons are above other elements */
+      border-radius: 50%; 
+      z-index: 10;
       }
 
       .carousel-control:hover {
-      background-color: rgba(255, 255, 255, 1); /* Change background on hover */
+      background-color: rgba(255, 255, 255, 1);
       }
 
     /* Form Styling */
@@ -189,19 +188,25 @@
     </nav>
 
     <!-- Carousel -->
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/car.jpg" class="d-block w-100" alt="...">
+          <img src="img/car.jpg" class="d-block w-100" alt="Pic1">
         </div>
         <div class="carousel-item">
-          <img src="img/kayak.jpg" class="d-block w-100" alt="...">
+          <img src="img/kayak.jpg" class="d-block w-100" alt="Pic2">
         </div>
         <div class="carousel-item">
-          <img src="img/view.jpg" class="d-block w-100" alt="...">
+          <img src="img/view.jpg" class="d-block w-100" alt="Pic3">
         </div>
         <div class="carousel-item">
-          <img src="img/headphone.jpg" class="d-block w-100" alt="...">
+          <img src="img/headphone.jpg" class="d-block w-100" alt="Pic4">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
