--- a/subscribe.html
+++ b/subscribe.html
@@ -66,68 +66,68 @@
     }
 
     .container-sm {
-        background: white;
-        padding: 2rem;
-        border-radius: 15px;
-        box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-        margin-top: 50px;
-        max-width: 600px;
-        margin: auto;
-        width: 90%; 
-        flex: 1; 
-        display: flex; 
-        flex-direction: column; 
-        justify-content: center; 
+      background: white;
+      padding: 2rem;
+      border-radius: 15px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      margin-top: 50px;
+      max-width: 600px;
+      margin: auto;
+      width: 90%; 
+      flex: 1; 
+      display: flex; 
+      flex-direction: column; 
+      justify-content: center; 
     }
 
     .form-label {
-        font-weight: 600;
-        color: #2c3e50;
-        margin-bottom: 0.5rem;
+      font-weight: 600;
+      color: #2c3e50;
+      margin-bottom: 0.5rem;
     }
 
     .form-control {
-        border: 2px solid #eee;
-        border-radius: 8px;
-        padding: 12px;
-        transition: all 0.3s ease;
+      border: 2px solid #eee;
+      border-radius: 8px;
+      padding: 12px;
+      transition: all 0.3s ease;
     }
 
     .form-control:focus {
-        border-color: #1e1f1e;
-        box-shadow: 0 0 0 0.2rem rgba(120, 120, 120, 0.25);
+      border-color: #1e1f1e;
+      box-shadow: 0 0 0 0.2rem rgba(120, 120, 120, 0.25);
     }
 
     .form-control::placeholder {
-        color: #95a5a6;
+      color: #95a5a6;
     }
     .form-wrapper {
-        flex: 1;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 2rem 0;
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 2rem 0;
     }
 
     .btn-success {
-        background-color: #4CAF50;
-        border: none;
-        padding: 12px 30px;
-        font-weight: 600;
-        letter-spacing: 0.5px;
-        border-radius: 8px;
-        transition: all 0.3s ease;
+      background-color: #4CAF50;
+      border: none;
+      padding: 12px 30px;
+      font-weight: 600;
+      letter-spacing: 0.5px;
+      border-radius: 8px;
+      transition: all 0.3s ease;
     }
 
     .btn-success:hover {
-        background-color: #45a049;
-        transform: translateY(-2px);
-        box-shadow: 0 5px 15px rgba(76, 175, 80, 0.3);
+      background-color: #45a049;
+      transform: translateY(-2px);
+      box-shadow: 0 5px 15px rgba(76, 175, 80, 0.3);
     }
 
     .mb-3 {
-        opacity: 0;
-        animation: fadeIn 0.5s ease forwards;
+      opacity: 0;
+      animation: fadeIn 0.5s ease forwards;
     }
 
     @keyframes fadeIn {
@@ -236,6 +236,7 @@
     </div>
 
     <footer>
+      <a>© Lifestyle Vibes, All Rights Reserved</a>
         <div class="social-icons">
           <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
             <i class="fab fa-instagram"></i>
