--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
   </head>
   <style>
     body {
-        background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-        min-height: 100vh;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        display: flex;
-        flex-direction: column;
-        overflow-y: auto;
-        overflow-x: hidden; 
+      background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+      min-height: 100vh;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      flex-direction: column;
+      overflow-y: auto;
+      overflow-x: hidden; 
     }
 
     .navbar {
@@ -94,60 +94,75 @@
     }
 
     /* Styling untuk contact section */
-    .contact-container {
-        max-width: 800px;
-        margin: 50px auto;
-        padding: 30px;
-        background: white;
-        border-radius: 15px;
-        box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    @keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+    .contact-container lg {
+      padding-top: 50px;
+      max-width: 800px;
+      margin: 50px auto;
+      padding: 30px;
+      background: white;
+      border-radius: 15px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
     }
 
     .contact-info {
-        margin: 30px 0;
+      margin: 30px 0;
     }
 
     .contact-item {
-        display: flex;
-        align-items: center;
-        padding: 20px;
-        margin: 10px 0;
-        border-radius: 10px;
-        transition: all 0.3s ease;
-        background: #f8f9fa;
+      display: flex;
+      align-items: center;
+      padding: 20px;
+      margin: 10px 0;
+      border-radius: 10px;
+      transition: all 0.3s ease;
+      background: #f8f9fa;
+      opacity: 0;
+      animation: fadeInUp 0.5 ease forwards;
     }
 
     .contact-item:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      transform: translateY(-3px);
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
     }
 
     .contact-item i {
-        font-size: 2em;
-        margin-right: 20px;
-        color: #2c3e50;
+      font-size: 2em;
+      margin-right: 20px;
+      color: #2c3e50;
     }
 
     .contact-item .content h3 {
-        margin: 0;
-        font-size: 1.2em;
-        color: #2c3e50;
+      margin: 0;
+      font-size: 1.2em;
+      color: #2c3e50;
     }
 
     .contact-item .content p {
-        margin: 5px 0 0;
-        color: #666;
+      margin: 5px 0 0;
+      color: #666;
     }
 
     .contact-item a {
-        text-decoration: none;
-        color: inherit;
+      text-decoration: none;
+      color: inherit;
     }
 
     .section-title {
-        text-align: center;
-        margin-bottom: 40px;
-        color: #2c3e50;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      padding-top: 50px;
+      text-align: center;
+      margin-bottom: 40px;
+      color: #2c3e50;
     }
   </style>
 
@@ -227,6 +242,7 @@
     </div>
 
     <footer>
+      <a>© Lifestyle Vibes, All Rights Reserved</a>
         <div class="social-icons">
           <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
             <i class="fab fa-instagram"></i>
@@ -243,5 +259,14 @@
           <a href="#">Terms & Conditions</a>
         </small>
     </footer>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+          const contactItems = document.querySelectorAll(".contact-item");
+          contactItems.forEach((item, index) => {
+              item.style.animationDelay = `${index * 0.2}s`;
+          });
+      });
+    </script>
   </body>
 </html>
