--- a/subscribe.html
+++ b/subscribe.html
@@ -12,13 +12,13 @@
 
   <style>
     body {
-        background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-        min-height: 100vh;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        display: flex; /* Tambahan */
-        flex-direction: column; /* Tambahan */
-        overflow-y: auto;
-        overflow-x: hidden; 
+      background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+      min-height: 100vh;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex; 
+      flex-direction: column; 
+      overflow-y: auto;
+      overflow-x: hidden; 
     }
 
     .navbar {
